  pixels based on the BLANK and MW tests.

* Added ability to specify a statsec, so that the statistics are only
  calculated from a given subsection of the cube, rather than the full
  cube.

* The output now includes three different estimates of the "centre" of
  the detection: peak location, centroid (flux-weighted), or average. 

* Spectral output now includes the baseline, if one was fitted.

* The subsections can also specify the ability to remove a border of n
  pixels from the edges of an axis (ie. n from the start and from the
  end) -- as requested in Trac ticket #5.

* Fixed bug (Trac ticket #4) that meant the velocity units were not
  correctly dealt with. Duchamp should be more robust for different
  velocity axis setups now.

* Fixed bug (ticket #9) with the VOTable output, where the tags were
  not closing.

* Fixed minor bug in calculating the flux threshold from the p-value
  threshold when the FDR method is used. This did not affect the
  actual thresholding, merely the quoted flux threshold in the results
  file. Also, the MW channels are kept out of the p-value threshold
  determination if they are being flagged.

* Fallback spectral units (in case the FITS header fails to record
  them) changed to SPC.

* Some slight improvements to the user feedback during execution.

* Changed the default value of the reconDim parameter from 3 to 1.


Duchamp version 1.0.7 (2006/11/22)
----------------------------------

One new feature, and some improvements and bug-fixes.

* The user can now elect to Hanning-smooth the spectral direction of
  the cube before the searching is done. This can be done instead of the
  wavelet reconstruction (although if both are selected, the
  reconstruction takes precendence). This functionality is switched on
  and off by the flagSmooth parameter, and the width of the Hanning
  kernel is governed by the hanningWidth parameter.

* The smoothed array can also be written to a FITS file and read in at